pqserve: info: aanpassing voorbeelden zodat ze ook resultaten geven in het corpus Alpino Treebank

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -116,9 +116,9 @@ De broncode van PaQu is beschikbaar op <a href="https://github.com/rug-compling/
 In de toepassing kun je zoeken naar woord-paren en hun syntactische
 relatie (zoals onderwerp, lijdend voorwerp, bepaling). In welke zinnen
 komt
-<a href="./?db=_default&amp;word=bier&amp;rel=obj1&amp;hword=drinken">het
-	  woord <em>bier</em> voor als lijdend voorwerp van het
-	  werkwoord <em>drinken</em></a>?
+<a href="./?db=_default&amp;word=film&amp;rel=obj1&amp;hword=zien">het
+	  woord <em>film</em> voor als lijdend voorwerp van het
+	  werkwoord <em>zien</em></a>?
 In welke zinnen komen
 <a href="./?db=_default&amp;word=Nederland&amp;rel=cnj%2Fcnj&amp;hword=België">de woorden <em>Nederland</em> en <em>België</em> voor
 als conjuncten in een coordinatie</a>?
@@ -132,8 +132,8 @@ woordsoort (werkwoord, bijvoeglijk naamwoord, zelfstandig naamwoord)
 nader beperken. Omdat je elk van de vijf velden ook oningevuld kunt
 laten, kun je ook vragen als de volgende formuleren: In welke zinnen
 komt
-<a href="./?db=_default&amp;rel=obj1&amp;hword=stelen">een lijdend
-	    voorwerp bij het werkwoord <em>stelen</em></a> voor?
+<a href="./?db=_default&amp;rel=obj1&amp;hword=eten">een lijdend
+	    voorwerp bij het werkwoord <em>eten</em></a> voor?
 In welke
 zinnen komt
 <a href="./?db=_default&amp;word=&amp;rel=su&amp;hword=beslissen&amp;postag=&amp;hpostag=">een onderwerp bij het werkwoord <em>beslissen</em></a> voor?
@@ -156,10 +156,10 @@ geldt
 in het plaatje bijvoorbeeld tussen <span class="hfd">fietsen</span> en
       <span class="wrd">kinderen</span>.
 <p>
-<a href="./?db=_default&amp;rel=obj1&amp;hword=stelen&amp;postag=n" target="_blank">Voorbeeld 1:</a> Je kunt deze relatie gebruiken om te zoeken naar alle
+<a href="./?db=_default&amp;rel=obj1&amp;hword=eten&amp;postag=n" target="_blank">Voorbeeld 1:</a> Je kunt deze relatie gebruiken om te zoeken naar alle
 			      zelfstandig naamwoorden (n) die als
 			      lijdend voorwerp (obj1) bij
-<span class="hfd">stelen</span> voorkomen.
+<span class="hfd">eten</span> voorkomen.
 <p>
 <a href="./?db=_default&amp;word=graag&amp;rel=mod&amp;hpostag=ww"
  target="_blank">Voorbeeld 2:</a>
@@ -326,11 +326,11 @@ het woord <span class="wrd">fietsen</span> en
 hoofd is van de rompzin (<b>body</b>) die
 hoort bij de vraagwoordgroep (<b>whd</b>) waarvan <span class="hfd">kinderen</span> het hoofd is.
 <p>
-<a href="./?db=_default&amp;rel=cnj%2Fcnj&amp;hword=appel&amp;postag=n" target="_blank">Voorbeeld:</a>
+<a href="./?db=_default&amp;rel=cnj%2Fcnj&amp;hword=suiker&amp;postag=n" target="_blank">Voorbeeld:</a>
 Deze relaties kun
 je gebruiken om te zoeken naar alle zelfstandig naamwoorden
 (n) die in de relatie
-cnj/cnj met <span class="hfd">appel</span> voorkomen.
+cnj/cnj met <span class="hfd">suiker</span> voorkomen.
 
 
 <br class="both">
@@ -502,32 +502,32 @@ Het antwoord ligt voor de hand: <span class="wrd">luiheid</span>.
 
     <h3 id="woorden">Zoeken naar woorden en lemma's</h3>
 
-    Zoek naar het woord <em>fiets</em>, inclusief vervoegingen en
+    Zoek naar het woord <em>was</em>, inclusief vervoegingen en
     varianten in collocatie (hoofdletters/kleine letters, met/zonder accenten):
     <div class="example">
-     <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=fiets">fiets</a>
+     <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=was">was</a>
     </div>
-    Zoek naar het woord <em>FiÉtŠ</em>, inclusief varianten in
+    Zoek naar het woord <em>wâŠ</em>, inclusief varianten in
     collocatie (hoofdletters/kleine letters, met/zonder accenten):
     <div class="example">
-      <span class="wrd">woord</span>:  <a href="./?db=_default&amp;word=%3fFi%c3%89t%c5%a0">?FiÉtŠ</a>
+      <span class="wrd">woord</span>:  <a href="./?db=_default&amp;word=%3fw%c3%a2%c5%a0">?wâŠ</a>
     </div>
-    Zoek naar woorden bij het lemma <em>fiets</em>
+    Zoek naar woorden bij het lemma <em>zijn</em>
     <div class="example">
-      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=%2bfiets">+fiets</a>
+      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=%2bzijn">+zijn</a>
     </div>
-    Zoek naar vervoegingen van het woord <em>weglopen</em>
+    Zoek naar vervoegingen van het woord <em>blijkgeven</em>
     <div class="example">
-      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=%40loop_weg">@loop_weg</a>
+      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=%40geef_blijk">@geef_blijk</a>
     </div>
 
-    Zoek naar het exacte woord <em>Fietsen</em> (hoofdletter- en accentgevoelig):
+    Zoek naar het exacte woord <em>Was</em> (hoofdletter- en accentgevoelig):
     <div class="example">
-      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=%3dFietsen">=Fietsen</a>
+      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=%3dWas">=Was</a>
     </div>
-    Zoek naar woorden die beginnen met <em>fiets</em>:
+    Zoek naar woorden die beginnen met <em>wass</em>:
     <div class="example">
-      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=fiets%25">fiets%</a>
+      <span class="wrd">woord</span>: <a href="./?db=_default&amp;word=wass%25">wass%</a>
     </div>
 
 <hr class="dbxml">
