TODO; pqserve: kleine correcties

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -33,9 +33,9 @@ Inhoud:
 <ul>
   <li><a href="#corplat" target="_self">Platte tekst</a>
   <ul>
-    <li><a href="#corform" target="_self">Metadata</a>
+    <li><a href="#cormeta" target="_self">Metadata</a>
   </ul>
-  <li><a href="#cormeta" target="_self">Andere formaten</a>
+  <li><a href="#corform" target="_self">Andere formaten</a>
 </ul>
 <li><a href="#contact" target="_self">Contact</a>
 </ul>
