--- a/src/pqserve/static/foliahelp4.html
+++ b/src/pqserve/static/foliahelp4.html
@@ -10,7 +10,25 @@
   <body>
 <!--##START-->
 <div>
-TODO
-</div>
+      <h3>FoLiA &mdash; Help</h3>
+      <h4>Label voor metadatabestand</h4>
+Bevat je corpus verwijzingen naar externe metadata?
+      <p>
+	Voorbeeld:
+<pre>
+&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;                                                                          
+&lt;FoLiA xmlns=&quot;http://ilk.uvt.nl/folia&quot; xmlns:xlink=&quot;http://www.w3.org/1999/xlink&quot;&gt;
+  &lt;metadata src=&quot;voorbeeld.xml&quot; type=&quot;cmdi&quot;&gt;
+    ...
+  &lt;/metadata&gt;
+  &lt;text&gt;
+    ...
+  &lt;/text&gt;
+&lt;/FoLiA&gt;
+</pre>
+Als je <em>label voor metadatabestand</em> aanvinkt, en een label hebt
+ingevuld, dat wordt in de uitvoer de naam van het gebruikte
+metadatabestand opgenomen in de metadata.
+    </div>
   </body>
 </html>
