pqserve: verbetering van uitleg bij foliatool

--- a/src/pqserve/static/foliahelp1.html
+++ b/src/pqserve/static/foliahelp1.html
@@ -33,15 +33,15 @@ Voorbeeld met tokenisatie:
         &lt;w&gt;&lt;t&gt;.&lt;/t&gt;&lt;/w&gt;
     &lt;/s&gt;
 </pre>
-Voor gesprekken kan als alternatief voor <tt>&lt;s&gt;</tt> ook <tt>&lt;utt&gt;</tt>
-zonder <tt>&lt;s&gt;</tt> gebruikt worden, mits zo'n
-<tt>&lt;utt&gt;</tt> de tekst van slechts één zin bevat.
+Voor gesprekken kan als alternatief voor <code>&lt;s&gt;</code> ook <code>&lt;utt&gt;</code>
+zonder <code>&lt;s&gt;</code> gebruikt worden, mits zo'n
+<code>&lt;utt&gt;</code> de tekst van slechts één zin bevat.
 <p>
 Je kunt een enkel FoLiA-bestand uploaden, of meerdere in één
 tar- of zip-bestand. Als je opnieuw iets uploadt worden oude FoLiA-bestanden
 verwijderd. Je kunt dus geen data toevoegen.
 <p>
-De naam van elk FoLiA-bestand moet met <tt>.xml</tt> eindigen,
+De naam van elk FoLiA-bestand moet met <code>.xml</code> eindigen,
 anders wordt het geruisloos genegeerd.
       
     </div>
