--- a/src/pqserve/static/foliahelp2.html
+++ b/src/pqserve/static/foliahelp2.html
@@ -39,9 +39,9 @@ verwijderd. Je kunt dus geen metadata toevoegen.
 Wanneer je FoLiA-bestanden hebt geüpload in een tar- of zip-bestand, en
 daarin zijn paden gebruikt, dan moet je voor de
 metadatabestanden dezelfde paden gebruiken. Dus als je een FoLiA-bestand
-<tt>path/to/folia1.xml</tt> hebt met daarin een
-verwijzing naar <tt>metadata1.xml</tt>, dan moet je een
-metadatabestand <tt>path/to/metadata1.xml</tt> hebben.
+<code>path/to/folia1.xml</code> hebt met daarin een
+verwijzing naar <code>metadata1.xml</code>, dan moet je een
+metadatabestand <code>path/to/metadata1.xml</code> hebben.
     </div>
   </body>
 </html>
