--- a/src/pqserve/static/foliahelp3.html
+++ b/src/pqserve/static/foliahelp3.html
@@ -29,7 +29,9 @@ Voorbeeld met tokenisatie:
     &lt;/s&gt;
 </pre>
 Een FoLiA-bestand kan zowel getokeniseerde als niet-getokeniseerde
-zinnen bevatten. Als je aangeeft dat de tekst getokeniseerd is
+zinnen bevatten, ook tegelijk.
+Maar PaQu kan maar één soort invoer tegelijk aan.
+Als je aangeeft dat de tekst getokeniseerd is
 wordt alle niet-getokeniseerde tekst genegeerd, en andersom.
 </div>
 </body>
