--- a/src/pqserve/static/foliahelp4.html
+++ b/src/pqserve/static/foliahelp4.html
@@ -11,7 +11,7 @@
 <!--##START-->
 <div>
       <h3>FoLiA &mdash; Help</h3>
-      <h4>Label voor metadatabestand</h4>
+      <h4>Label in uitvoer</h4>
 Bevat je corpus verwijzingen naar externe metadata?
       <p>
 	Voorbeeld:
@@ -27,7 +27,7 @@ Bevat je corpus verwijzingen naar externe metadata?
 &lt;/FoLiA&gt;
 </pre>
 Als je <em>label voor metadatabestand</em> aanvinkt, en een label hebt
-ingevuld, dat wordt in de uitvoer de naam van het gebruikte
+ingevuld, dan wordt in de uitvoer de naam van het gebruikte
 metadatabestand opgenomen in de metadata.
     </div>
   </body>
