Verschillende dingen, vooral met betrekking tot FoLiA

--- a/src/pqserve/static/foliahelp5.html
+++ b/src/pqserve/static/foliahelp5.html
@@ -26,7 +26,7 @@ Alleen definities die je aanvinkt worden uiteindelijk gebruikt.
 komt.
 <dt>Soort
 <dd>Wat voor soort gegeven is het? Kies een van de
-vijf mogelijkheden.<br>
+vijf uit het menu: <em>text, int, float, date, datetime</em><br>
 Voor <em>date</em> moet de waarde dit formaat
 hebben: <code>YYYY-MM-DD</code>
 (bijv: <code>2016-04-25</code>)<br>
@@ -35,8 +35,8 @@ deze formaten hebben:
 <code>YYYY-MM-DD hh:mm:ss</code> of <code>YYYY-MM-DD hh:mm</code>
 (bijv: <code>2016-04-25 13:45:30</code> of <code>2016-04-25 13:45</code>)<br>
 <dt>Extern XPath / Intern XPath / Native ID
-<dd>Er zijn vier verschillende manieren om metadata in FoLiA op te nemen.
-Drie daarvan worden ondersteund. Er zijn dus ook drie
+<dd>Er zijn drie verschillende manieren om metadata in FoLiA op te nemen
+die worden ondersteund door PaQu. Er zijn dus ook drie
 manieren om gegevens uit die
 metadata te halen.
 <dt>Specificatie
