Geen speciale betekenis voor haken in tekst die al getokeniseerd is.

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -572,12 +572,10 @@ geval zal PaQu de tekst voor je in zinnen opdelen, tokeniseren, en
 voorzien van een label voor elke zin.
 <p>
 Is de tekst al opgedeeld in één zin per regel, dan kijkt PaQu of de
-tekst al getokeniseerd wordt. Zo niet, dan wordt dat alsnog gedaan. Als
-er nog geen labels aanwezig zijn, dan voegt PaQu die toe. Tekst die al
-getokeniseerd is mag codes bevatten die als instructie voor de parser
-dienen, zie onder <em>Tips and tricks</em> in de
-<a href="http://www.let.rug.nl/vannoord/DCOI/AnnotationGuide.html">Manual
-for syntactic annotators</a>.
+tekst al getokeniseerd is. Zo niet, dan wordt dat alsnog gedaan. Als
+er nog geen labels aanwezig zijn, dan voegt PaQu die toe. (Anders dan in
+Alpino hebben rechte haken in tekst die al getokeniseerd is geen
+speciale betekenis.)
 <p>
 PaQu probeert automatisch te bepalen hoe de tekst is ingedeeld. Dat gaat
 niet altijd goed. Daarom kun je voordat je de tekst uploadt onder
