Negeer commentaren in invoer. Negeer labels in invoer van doorlopende tekst.

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -565,6 +565,12 @@ of zonder BOM). Wanneer geen van deze tekensets herkend wordt gaat PaQu
 ervan uit dat de tekenset Windows-1252 is (of ISO-8859-1, een
 subset van Windows-1252). Alle tekst moet in dezelfde tekenset gecodeerd zijn.
 <p>
+Commentaren worden genegeerd. Commentaren zijn regels die beginnen met
+een procentteken.
+<p>
+Labels in doorlopende tekst worden genegeerd. Een label in doorlopende
+tekst is een regel die eindigt met een verticale streep.
+<p>
 Wat PaQu met de tekst doet hangt ervan af hoe het er uitziet. Is het
 doorlopende tekst (eventueel ingedeeld in paragrafen gescheiden door een
 lege regel), of bestaat de tekst al uit één zin per regel? In het eerste
