pqserve: info: UDs door Gosse Bouma

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -101,7 +101,9 @@ en <a href="http://www.clariah.nl/">clariah</a>. De woordparen-zoekinterface is
 gebaseerd op een eerdere versie die door Erik Tjong Kim Sang is gemaakt. De XPath-zoekinterface is
 gebaseerd op de <a href="http://rug-compling.github.io/dact/">Dact</a> software
 die door Daniël de Kok en collega's is gemaakt. De automatische syntactische
-annotatie gebruikt de Alpino parser. De Lassy corpora zijn ontwikkeld in het Stevin Lassy project.
+annotatie gebruikt de Alpino parser.
+De automatische afleiding van Universal Dependencies is ontwikkeld door Gosse Bouma.
+De Lassy corpora zijn ontwikkeld in het Stevin Lassy project.
 <p>
 <table class="credits">
 <tr>
