--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -31,7 +31,8 @@ Inhoud:
 <li class="dbxml"><a href="#xpath" target="_self" class="dbxml">Zoeken met XPath</a>
 <ul class="dbxml">
   <li class="dbxml"><a href="#expanded" target="_self" class="dbxml">Zoeken met geëxpandeerde indexnodes</a>
-  <li class="dbxml"><a href="#ud" target="_self" class="dbxml">Zoeken naar Universal Dependencies</a>
+  <li class="dbxml"><a href="#ud" target="_self" class="dbxml">Zoeken met Universal Dependencies</a>
+  <li class="dbxml"><a href="#subset" target="_self" class="dbxml">Zoekresultaten beperken</a>
 </ul class="dbxml">
 <li><a href="#corpora" target="_self">Corpora</a>
 <ul>
@@ -77,7 +78,7 @@ PaQu gebruikt de syntactische annotatie om daaruit automatisch
 <a href="https://universaldependencies.org/">Universal
 Dependencies</a> af te leiden, en die te integreren in de syntactische
 annotatie. Het resultaat hiervan kan met XPath bevraagd worden.
-	      
+
 <h3 id="inlnk">Nadere informatie</h3>
 
 De preciese uitleg voor de syntactische annotatie is beschikbaar in de het document
@@ -577,11 +578,61 @@ indexnodes aangevuld met de gegevens &mdash; attributen en dochters
 geval toch een match.
 </div>
 
-<h3 id="ud" class="dbxml" style="clear:both">Zoeken naar Universal Dependencies</h3>
+<h3 id="ud" class="dbxml" style="clear:both">Zoeken met Universal Dependencies</h3>
 <div class="dbxml">
 Dit is niet beschikbaar voor de grootste corpora.
 <p>
-TODO
+Informatie over <a href="https://universaldependencies.org/" target="_blank">Universal
+Dependencies</a> is opgenomen in de XML. Je kunt deze informatie
+gebruiken om bij het zoeken naar een soort node het zoeken nader in te
+perken. Bijvoorbeeld, om te zoeken naar <a href="xpath?db=_default&amp;xpath=%2F%2Fnode%5B%40cat%3D&quot;mwu&quot;+and+node%5B%40pt%3D&quot;vz&quot;%5D+and+node%2Fud%5B%40deprel%3D&quot;case&quot;%5D%5D" target="_blank">voorzetseluitdrukkingen</a>:
+<p>
+<pre>
+    //node[@cat=&quot;mwu&quot; and node[@pt=&quot;vz&quot;] and node/ud[@deprel=&quot;case&quot;]]
+</pre>
+<p>
+Je kunt ook direct in de dependencies zelf zoeken. Bijvoorbeeld om te
+zoeken naar
+<a href="xpath?db=_default&amp;xpath=%2F%2F*%5B%40lemma%3D%28&quot;eten&quot;%2C&quot;op_eten&quot;%29%5D%2Fobj%5B%40upos%3D&quot;NOUN&quot;%5D"
+target="_blank">wat men eet</a>:
+<p>
+<pre>
+    //*[@lemma=(&quot;eten&quot;,&quot;op_eten&quot;)]/obj[@upos=&quot;NOUN&quot;]
+</pre>
+<p>
+Brood <a href="xpath?db=_default&amp;xpath=%2F%2F*%5B%40lemma%3D&quot;brood&quot;%5D%2Fnmod%5B%40deprel_aux+%3D&quot;met&quot;%5D"
+target="_blank">met wat?</a> :
+<p>
+<pre>
+    //*[@lemma=&quot;brood&quot;]/nmod[@deprel_aux =&quot;met&quot;]
+</pre>
+</div>
+
+<h3 id="subset" class="dbxml" style="clear:both">Zoekresultaten beperken</h3>
+<div class="dbxml">
+
+Soms geeft een zoekterm meerdere matches voor hetzelfde ding in een
+zin. Bijvoorbeeld als je naar een dependency zoekt kun je een gewone
+dependency en een enhanced dependency treffen. Als je daarna gaat
+tellen worden die dingen dubbel geteld.
+<p>
+Om dat te voorkomen kun je de zoekresultaten beperken door onder het
+zoekveld een of twee filters aan te vinken.
+<p>
+Met <u>Alpino</u> zoek je alleen naar dingen onder
+<code>/alpino_ds/node</code>
+<p>
+Met <u>Basic UD</u> zoek je alleen naar standaard dependency's onder
+<code>/alpino_ds/root[@ud=&quot;basic&quot;]</code>
+<p>
+Met <u>Enhanced UD</u> zoek je alleen naar enhanced dependency's onder
+<code>/alpino_ds/root[@ud=&quot;enhanced&quot;]</code>
+<p>
+
+Wanneer je
+<a href="http://rug-compling.github.io/dact/cookbook/#query-pipelines"
+target="_blank">pipelines</a> gebruikt heeft het filter alleen effect
+op het laatste deel in de pipeline.
 
 </div>
 
