pqbuild, pqserve: metadata type bool

--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -692,13 +692,14 @@ In het voorbeeld hierboven, heeft <em>genre</em> twee waardes en
 Je kunt een metadata-item uit een eerder blok wissen zonder een nieuwe
 waarde te geven door achter het is-teken geen waarde op te geven.
 <p>
-Er zijn vijf soorten metadata, aangegeven met de aanduidingen
-<em>text</em>, <em>int</em>, <em>float</em>, <em>date</em> en
+Er zijn zes soorten metadata, aangegeven met de aanduidingen
+<em>text</em>, <em>bool</em>, <em>int</em>, <em>float</em>, <em>date</em> en
 <em>datetime</em>. Let op het formaat voor <em>date</em> en
 <em>datetime</em>:
 
 <div class="voorbeeld">
 ##META text     naam    = Johannes<br>
+##META bool     auth    = true<br>
 ##META int      aantal  = 7<br>
 ##META float    score   = 26.34<br>
 ##META date     geboren = 1964-04-10<br>
