--- a/src/pqserve/static/info.html
+++ b/src/pqserve/static/info.html
@@ -551,7 +551,7 @@ kunnen gebruiken moet je zijn ingelogd. Klik op de knop <em>Macro's</em> om
 macro's te kunnen uploaden en/of te bewerken.
 <p>
   Voorbeelden, zie:
-  <a href="https://urd2.let.rug.nl/~alud/" target="_blank">cookbook</a>
+  <a href="https://urd2.let.rug.nl/~kleiweg/paqu-cookbook/" target="_blank">cookbook</a>
 </div>
 
 <h3 id="expanded" class="dbxml">Zoeken met geëxpandeerde indexnodes</h3>
