pqserve: info: link naar GrETEL

--- a/src/internal/file/data/info.html
+++ b/src/internal/file/data/info.html
@@ -17,6 +17,7 @@ Inhoud:
   <ul>
   <li><a href="#inlnk" target="_self">Nadere informatie</a>
   <li><a href="#credits" target="_self">Over PaQu</a>
+  <li><a href="#zieook" target="_self">Zie ook</a>
   </ul>
 <li><a href="#zoeken" target="_self">Zoeken naar woordparen</a>
   <ul>
@@ -120,6 +121,15 @@ De Lassy corpora zijn ontwikkeld in het Stevin Lassy project.
 </table>
 <p>
 De broncode van PaQu is beschikbaar op <a href="https://github.com/rug-compling/paqu">github</a>.
+
+<h3 id="zieook">Zie ook</h3>
+
+<ul>
+<li><a href="https://gretel.ccl.kuleuven.be/" target="_blank">GrETEL</a> stands for
+<b>Gr</b>eedy <b>E</b>xtraction of <b>T</b>rees for <b>E</b>mpirical
+<b>L</b>inguistics. It is a user-friendly search engine for the
+exploitation of syntactically annotated corpora or <em>treebanks</em>.
+</ul>
 
 <hr>
     <h2 id="zoeken">Zoeken naar woordparen</h2>
