pqserve: info: zie ook: AlpinoGraph

--- a/src/internal/file/data/info.html
+++ b/src/internal/file/data/info.html
@@ -17,7 +17,7 @@ Inhoud:
   <ul>
   <li><a href="#inlnk" target="_self">Nadere informatie</a>
   <li><a href="#credits" target="_self">Over PaQu</a>
-  <li><a href="#zieook" target="_self">Zie ook</a>
+  <li><a href="#zieook" target="_self">Vergelijkbare systemen</a>
   </ul>
 <li><a href="#zoeken" target="_self">Zoeken naar woordparen</a>
   <ul>
@@ -122,9 +122,11 @@ De Lassy corpora zijn ontwikkeld in het Stevin Lassy project.
 <p>
 De broncode van PaQu is beschikbaar op <a href="https://github.com/rug-compling/paqu">github</a>.
 
-<h3 id="zieook">Zie ook</h3>
+<h3 id="zieook">Vergelijkbare systemen</h3>
 
 <ul>
+<li><a href="https://urd2.let.rug.nl/~kleiweg/alpinograph/" target="_blank">AlpinoGraph</a> is een tool om syntactisch geannoteerde corpora te doorzoeken.
+De zoek-queries die je kunt gebruiken zijn een mix van SQL en Cypher.
 <li><a href="https://gretel.ccl.kuleuven.be/" target="_blank">GrETEL</a> stands for
 <b>Gr</b>eedy <b>E</b>xtraction of <b>T</b>rees for <b>E</b>mpirical
 <b>L</b>inguistics. It is a user-friendly search engine for the
